--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.2",
     "firebase": "^9.9.4",
+    "firebaseui": "^6.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-modal": "^3.15.1",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
