--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
     "swiper": "^8.3.2",
+    "use-between": "^1.3.4",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
