--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.0.2",
     "firebase": "^9.9.4",
     "firebaseui": "^6.0.1",
+    "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
     "swiper": "^8.3.2",
+    "touch": "^3.1.0",
     "use-between": "^1.3.4",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
@@ -28,6 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": [
@@ -47,4 +50,5 @@
       "last 1 safari version"
     ]
   }
+ 
 }
